--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   google_sign_in: ^5.1.0
   http: ^0.13.0
   firebase_auth: ^4.11.0
-  firebase_core : ^2.18.0
+  firebase_core : ^2.20.0
+  collection: ^1.17.2
+  cloud_firestore: ^4.12.0
 
 dev_dependencies:
   flutter_test:
