--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core : ^2.20.0
   collection: ^1.17.2
   cloud_firestore: ^4.12.0
+  auth: ^8.2.0+02
 
 dev_dependencies:
   flutter_test:
