--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   collection: ^1.17.2
   cloud_firestore: ^4.12.0
   auth: ^8.2.0+02
+  flutter_facebook_auth: ^5.0.11
 
 dev_dependencies:
   flutter_test:
