--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
     id 'com.google.gms.google-services'
+    
 }
 
 def localProperties = new Properties()
@@ -71,4 +72,6 @@ flutter {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.3.1')
+    
+    implementation platform('com.google.firebase:firebase-bom:32.4.0')
 }
