--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^4.12.0
   auth: ^8.2.0+02
   flutter_facebook_auth: ^5.0.11
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
