--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   auth: ^8.2.0+02
   flutter_facebook_auth: ^5.0.11
   provider: ^6.0.5
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
