--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
   assets:
      - assets/google.png
      - assets/user.png
+     - assets/camera.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
