--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_facebook_auth: ^5.0.11
   provider: ^6.0.5
   image_picker: ^0.8.6
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
